tests/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-1.rs
// edition:2018

use xcrate::S; //~ ERROR unresolved import `xcrate`

fn main() {}
